--- a/funATI/funATIAPP/static/css/styles.css
+++ b/funATI/funATIAPP/static/css/styles.css
@@ -632,6 +632,7 @@ form .media-preview-img {
   transition: opacity 0.2s;
   margin-top: 8px;
   display: block;
+  padding-left: 50px;
 }
 
 .ver-comentarios:hover {
